--- a/MPPhotoSlideshow2/Skin/default/screens/mp_photo_slideshow.xaml
+++ b/MPPhotoSlideshow2/Skin/default/screens/mp_photo_slideshow.xaml
@@ -12,13 +12,13 @@
                 </TransformGroup>
             </Canvas.RenderTransform>
             <Grid>
-                <Border x:Name="Picture1Border" MaxWidth="{Binding Path=Picture1WidthProperty}" MinWidth="{Binding Path=Picture1WidthProperty}" 
-                    MaxHeight="{Binding Path=Picture1HeightProperty}" MinHeight="{Binding Path=Picture1HeightProperty}"
+                <Border x:Name="Picture1Border" MaxWidth="{Binding Path=Picture1WidthProperty}"
+                    MaxHeight="{Binding Path=Picture1HeightProperty}"
                     HorizontalAlignment="Left" VerticalAlignment="Top" >
                     <Border.Background>
                         <ImageBrush ImageSource="mpslideshow_image_border.png" Tile="Tile"/>
                     </Border.Background>
-                    <Image Source ="{Binding Path=Picture1Property}" Stretch="UniformToFill" Margin ="10,10,10,10"/>
+                    <Image Source ="{Binding Path=Picture1Property}" Stretch="Uniform" Margin ="10,10,10,10"/>
                 </Border>
                 <Label x:Name="Picture1Label" Content="{Binding Path=Picture1DateProperty}" 
               HorizontalAlignment="Center" VerticalAlignment="Bottom" 
@@ -35,10 +35,10 @@
             <Grid>
                 <Border x:Name="Picture2Border" BorderBrush="White" 
                     BorderThickness="10" 
-                        MaxWidth="{Binding Path=Picture2WidthProperty}" MinWidth="{Binding Path=Picture2WidthProperty}" 
-                        MaxHeight="{Binding Path=Picture2HeightProperty}" MinHeight="{Binding Path=Picture2HeightProperty}"
+                        MaxWidth="{Binding Path=Picture2WidthProperty}"
+                        MaxHeight="{Binding Path=Picture2HeightProperty}"
                     HorizontalAlignment="Left" VerticalAlignment="Top" >
-                    <Image Source ="{Binding Path=Picture2Property}" Stretch="UniformToFill"/>
+                    <Image Source ="{Binding Path=Picture2Property}" Stretch="Uniform"/>
                 </Border>
                 <Label x:Name="Picture2Label" Content="{Binding Path=Picture2DateProperty}" 
               HorizontalAlignment="Center" VerticalAlignment="Bottom" 
@@ -55,10 +55,10 @@
             <Grid>
                 <Border x:Name="Picture3Border" BorderBrush="White" 
                     BorderThickness="10" 
-                        MaxWidth="{Binding Path=Picture3WidthProperty}" MinWidth="{Binding Path=Picture3WidthProperty}" 
-                        MaxHeight="{Binding Path=Picture3HeightProperty}" MinHeight="{Binding Path=Picture3HeightProperty}"
+                        MaxWidth="{Binding Path=Picture3WidthProperty}"
+                        MaxHeight="{Binding Path=Picture3HeightProperty}"
                     HorizontalAlignment="Left" VerticalAlignment="Top" >
-                    <Image Source ="{Binding Path=Picture3Property}" Stretch="UniformToFill"/>
+                    <Image Source ="{Binding Path=Picture3Property}" Stretch="Uniform"/>
                 </Border>
                 <Label x:Name="Picture3Label" Content="{Binding Path=Picture3DateProperty}" 
               HorizontalAlignment="Center" VerticalAlignment="Bottom" 
@@ -75,10 +75,10 @@
             <Grid>
                 <Border x:Name="Picture4Border" BorderBrush="White" 
                     BorderThickness="10" 
-                        MaxWidth="{Binding Path=Picture4WidthProperty}" MinWidth="{Binding Path=Picture4WidthProperty}" 
-                        MaxHeight="{Binding Path=Picture4HeightProperty}" MinHeight="{Binding Path=Picture4HeightProperty}"
+                        MaxWidth="{Binding Path=Picture4WidthProperty}"
+                        MaxHeight="{Binding Path=Picture4HeightProperty}"
                     HorizontalAlignment="Left" VerticalAlignment="Top" >
-                    <Image Source ="{Binding Path=Picture4Property}" Stretch="UniformToFill"/>
+                    <Image Source ="{Binding Path=Picture4Property}" Stretch="Uniform"/>
                 </Border>
                 <Label x:Name="Picture4Label" Content="{Binding Path=Picture4DateProperty}" 
               HorizontalAlignment="Center" VerticalAlignment="Bottom" 
@@ -95,10 +95,10 @@
             <Grid>
                 <Border x:Name="Picture5Border" BorderBrush="White" 
                     BorderThickness="10" 
-                        MaxWidth="{Binding Path=Picture5WidthProperty}" MinWidth="{Binding Path=Picture5WidthProperty}" 
-                        MaxHeight="{Binding Path=Picture5HeightProperty}" MinHeight="{Binding Path=Picture5HeightProperty}"
+                        MaxWidth="{Binding Path=Picture5WidthProperty}"
+                        MaxHeight="{Binding Path=Picture5HeightProperty}"
                     HorizontalAlignment="Left" VerticalAlignment="Top" >
-                    <Image Source ="{Binding Path=Picture5Property}" Stretch="UniformToFill"/>
+                    <Image Source ="{Binding Path=Picture5Property}" Stretch="Uniform"/>
                 </Border>
                 <Label x:Name="Picture5Label" Content="{Binding Path=Picture5DateProperty}" 
               HorizontalAlignment="Center" VerticalAlignment="Bottom" 
@@ -115,10 +115,10 @@
             <Grid>
                 <Border x:Name="Picture6Border" BorderBrush="White" 
                     BorderThickness="10" 
-                        MaxWidth="{Binding Path=Picture6WidthProperty}" MinWidth="{Binding Path=Picture6WidthProperty}" 
-                        MaxHeight="{Binding Path=Picture6HeightProperty}" MinHeight="{Binding Path=Picture6HeightProperty}"
+                        MaxWidth="{Binding Path=Picture6WidthProperty}"
+                        MaxHeight="{Binding Path=Picture6HeightProperty}"
                     HorizontalAlignment="Left" VerticalAlignment="Top" >
-                    <Image Source ="{Binding Path=Picture6Property}" Stretch="UniformToFill"/>
+                    <Image Source ="{Binding Path=Picture6Property}" Stretch="Uniform"/>
                 </Border>
                 <Label x:Name="Picture6Label" Content="{Binding Path=Picture6DateProperty}" 
               HorizontalAlignment="Center" VerticalAlignment="Bottom" 
@@ -135,10 +135,10 @@
             <Grid>
                 <Border x:Name="Picture7Border" BorderBrush="White" 
                     BorderThickness="10" 
-                        MaxWidth="{Binding Path=Picture7WidthProperty}" MinWidth="{Binding Path=Picture7WidthProperty}" 
-                        MaxHeight="{Binding Path=Picture7HeightProperty}" MinHeight="{Binding Path=Picture7HeightProperty}"
+                        MaxWidth="{Binding Path=Picture7WidthProperty}"
+                        MaxHeight="{Binding Path=Picture7HeightProperty}"
                     HorizontalAlignment="Left" VerticalAlignment="Top" >
-                    <Image Source ="{Binding Path=Picture7Property}" Stretch="UniformToFill"/>
+                    <Image Source ="{Binding Path=Picture7Property}" Stretch="Uniform"/>
                 </Border>
                 <Label x:Name="Picture7Label" Content="{Binding Path=Picture7DateProperty}" 
               HorizontalAlignment="Center" VerticalAlignment="Bottom" 
@@ -155,10 +155,10 @@
             <Grid>
                 <Border x:Name="Picture8Border" BorderBrush="White" 
                     BorderThickness="10" 
-                        MaxWidth="{Binding Path=Picture8WidthProperty}" MinWidth="{Binding Path=Picture8WidthProperty}" 
-                        MaxHeight="{Binding Path=Picture8HeightProperty}" MinHeight="{Binding Path=Picture8HeightProperty}"
+                        MaxWidth="{Binding Path=Picture8WidthProperty}"
+                        MaxHeight="{Binding Path=Picture8HeightProperty}"
                     HorizontalAlignment="Left" VerticalAlignment="Top" >
-                    <Image Source ="{Binding Path=Picture8Property}" Stretch="UniformToFill"/>
+                    <Image Source ="{Binding Path=Picture8Property}" Stretch="Uniform"/>
                 </Border>
                 <Label x:Name="Picture8Label" Content="{Binding Path=Picture8DateProperty}" 
               HorizontalAlignment="Center" VerticalAlignment="Bottom" 
