--- a/MPPhotoSlideshow2/Skin/default/screens/mp_photo_slideshow.xaml
+++ b/MPPhotoSlideshow2/Skin/default/screens/mp_photo_slideshow.xaml
@@ -1,183 +1,70 @@
 <Screen xmlns="www.team-mediaportal.com/2008/mpf/directx" 
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
+        xmlns:collections="clr-namespace:MediaPortal.UI.Presentation.DataObjects;assembly=MediaPortal.UI"
         Context="{Model Id=C6B0FA5A-288E-405A-A5D5-AA66CC0AA327}">
+    <Screen.Resources>
+        <Storyboard x:Key="Storyboard" BeginTime="00:00:00.000" Duration="00:00:10.000">
+            <DoubleAnimation Storyboard.TargetName="RotateImage" 
+                             Storyboard.TargetProperty="(UIElement.RenderTransform).(RotateTransform.Angle)" 
+                             From="0" To="360" BeginTime="00:00:05.000" Duration="00:00:05.000" />
+            <DoubleAnimation Storyboard.TargetName="OpacityImage" 
+                             Storyboard.TargetProperty="Opacity" 
+                             From="1" To="0" Duration="00:00:10.000" />
+        </Storyboard>
+        <DataTemplate x:Key="ItemDataTemplate" DataType="{x:Type collections:ListItem}">
+            <Canvas>
+                <Grid Canvas.Left="{Binding LeftProperty}" Canvas.Top="{Binding TopProperty}">
+                    <Grid.RenderTransform>
+                        <TransformGroup>
+                            <RotateTransform CenterX="{Binding RotateXProperty}" CenterY="{Binding RotateYProperty}" Angle="{Binding RotateAngleProperty}" />
+                        </TransformGroup>
+                    </Grid.RenderTransform>
+                    <Border x:Name="PictureBorder" MaxWidth="{Binding Path=PictureWidthProperty}"
+                            MaxHeight="{Binding Path=PictureHeightProperty}"
+                            HorizontalAlignment="Left" VerticalAlignment="Top" >
+                        <Border.Background>
+                            <ImageBrush ImageSource="{Binding Path=BorderImageProperty}" Tile="Tile"/>
+                        </Border.Background>
+                        <Image Stretch="Uniform" Margin ="{Binding Path=PictureBorderMarginsProperty}" Thumbnail="false" Source="{Binding Path=PictureImageProperty}">
+                            <!--Can't use this until the fix is merged to master MP2 Alpha 4-->
+                            <!--<Image.Source>
+                                <BitmapImageSource DecodePixelWidth="{Binding Path=PictureWidthProperty}" UriSource="{Binding Path=PictureImageProperty}"/>
+                            </Image.Source>-->
+                            <Image.Triggers>
+                                <EventTrigger RoutedEvent="Image.Loaded">
+                                    <BeginStoryboard Storyboard="{ThemeResource Storyboard}" />
+                                </EventTrigger>
+                            </Image.Triggers>
+                        </Image>
+                    </Border>
+                    <Label x:Name="PictureLabel" Content="{Binding Path=PictureDateProperty}" 
+                          HorizontalAlignment="Center" VerticalAlignment="Bottom" 
+                          Color="{Binding Path=PictureDateColorProperty}" FontSize="{Binding Path=PictureDateFontSizeProperty}"/>
+                </Grid>
+            </Canvas>
+        </DataTemplate>
+        <Style x:Key="ListViewStyle" BasedOn="{ThemeResource DefaultListViewStyle}">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type ListView}">
+                            <ItemsPresenter VerticalAlignment="Stretch" HorizontalAlignment="Stretch"/>  
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Setter Property="ItemTemplate" Value="{ThemeResource ItemDataTemplate}"/>
+            <Setter Property="ItemsPanel">
+                <Setter.Value>
+                    <ItemsPanelTemplate>
+                        <Grid x:Name="ListItemsHost" IsItemsHost="True"/>
+                    </ItemsPanelTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Screen.Resources>       
     <Canvas>
         <Canvas.Background>
             <ImageBrush ImageSource="{Binding Path=SlideshowBackgroundProperty}" Stretch="Fill"/>
         </Canvas.Background>
-        <Canvas x:Name="Picture1Grid" Canvas.Top="{Binding Path=Picture1PosYProperty}" Canvas.Left="{Binding Path=Picture1PosXProperty}">
-            <Canvas.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform CenterX="100" CenterY="75" Angle="0" />
-                </TransformGroup>
-            </Canvas.RenderTransform>
-            <Grid>
-                <Border x:Name="Picture1Border" MaxWidth="{Binding Path=Picture1WidthProperty}"
-                    MaxHeight="{Binding Path=Picture1HeightProperty}"
-                    HorizontalAlignment="Left" VerticalAlignment="Top" >
-                    <Border.Background>
-                        <ImageBrush ImageSource="{Binding Path=Picture1BorderProperty}" Tile="Tile"/>
-                    </Border.Background>
-                    <Image Source ="{Binding Path=Picture1Property}" Stretch="Uniform" Margin ="{Binding Path=Picture1BorderMarginsProperty}"/>
-                </Border>
-                <Label x:Name="Picture1Label" Content="{Binding Path=Picture1DateProperty}" 
-              HorizontalAlignment="Center" VerticalAlignment="Bottom" 
-              Color="{Binding Path=Picture1DateColorProperty}" FontSize="8"/>
-            </Grid>
-        </Canvas>
-        <Canvas x:Name="Picture2Grid" Canvas.Top="{Binding Path=Picture2PosYProperty}" 
-                Canvas.Left="{Binding Path=Picture2PosXProperty}">
-            <Canvas.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform CenterX="200" CenterY="75" Angle="0" />
-                </TransformGroup>
-            </Canvas.RenderTransform>
-            <Grid>
-                <Border x:Name="Picture2Border"
-                        MaxWidth="{Binding Path=Picture2WidthProperty}"
-                        MaxHeight="{Binding Path=Picture2HeightProperty}"
-                    HorizontalAlignment="Left" VerticalAlignment="Top" >
-                    <Border.Background>
-                        <ImageBrush ImageSource="{Binding Path=Picture2BorderProperty}" Tile="Tile"/>
-                    </Border.Background>
-                    <Image Source ="{Binding Path=Picture2Property}" Stretch="Uniform" Margin ="{Binding Path=Picture2BorderMarginsProperty}"/>
-                </Border>
-                <Label x:Name="Picture2Label" Content="{Binding Path=Picture2DateProperty}" 
-              HorizontalAlignment="Center" VerticalAlignment="Bottom" 
-              Color="{Binding Path=Picture2DateColorProperty}" FontSize="8"/>
-            </Grid>
-        </Canvas>
-        <Canvas x:Name="Picture3Grid" Canvas.Top="{Binding Path=Picture3PosYProperty}" 
-                Canvas.Left="{Binding Path=Picture3PosXProperty}">
-            <Canvas.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform CenterX="200" CenterY="75" Angle="0" />
-                </TransformGroup>
-            </Canvas.RenderTransform>
-            <Grid>
-                <Border x:Name="Picture3Border"
-                        MaxWidth="{Binding Path=Picture3WidthProperty}"
-                        MaxHeight="{Binding Path=Picture3HeightProperty}"
-                    HorizontalAlignment="Left" VerticalAlignment="Top" >
-                    <Border.Background>
-                        <ImageBrush ImageSource="{Binding Path=Picture3BorderProperty}" Tile="Tile"/>
-                    </Border.Background>
-                    <Image Source ="{Binding Path=Picture3Property}" Stretch="Uniform" Margin ="{Binding Path=Picture3BorderMarginsProperty}"/>
-                </Border>
-                <Label x:Name="Picture3Label" Content="{Binding Path=Picture3DateProperty}" 
-              HorizontalAlignment="Center" VerticalAlignment="Bottom" 
-              Color="{Binding Path=Picture3DateColorProperty}" FontSize="8"/>
-            </Grid>
-        </Canvas>
-        <Canvas x:Name="Picture4Grid" Canvas.Top="{Binding Path=Picture4PosYProperty}" 
-                Canvas.Left="{Binding Path=Picture4PosXProperty}">
-            <Canvas.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform CenterX="200" CenterY="75" Angle="0" />
-                </TransformGroup>
-            </Canvas.RenderTransform>
-            <Grid>
-                <Border x:Name="Picture4Border"
-                        MaxWidth="{Binding Path=Picture4WidthProperty}"
-                        MaxHeight="{Binding Path=Picture4HeightProperty}"
-                    HorizontalAlignment="Left" VerticalAlignment="Top" >
-                    <Border.Background>
-                        <ImageBrush ImageSource="{Binding Path=Picture4BorderProperty}" Tile="Tile"/>
-                    </Border.Background>
-                    <Image Source ="{Binding Path=Picture4Property}" Stretch="Uniform" Margin ="{Binding Path=Picture4BorderMarginsProperty}"/>
-                </Border>
-                <Label x:Name="Picture4Label" Content="{Binding Path=Picture4DateProperty}" 
-              HorizontalAlignment="Center" VerticalAlignment="Bottom" 
-              Color="{Binding Path=Picture4DateColorProperty}" FontSize="8"/>
-            </Grid>
-        </Canvas>
-        <Canvas x:Name="Picture5Grid" Canvas.Top="{Binding Path=Picture5PosYProperty}" 
-                Canvas.Left="{Binding Path=Picture5PosXProperty}">
-            <Canvas.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform CenterX="200" CenterY="75" Angle="0" />
-                </TransformGroup>
-            </Canvas.RenderTransform>
-            <Grid>
-                <Border x:Name="Picture5Border"
-                        MaxWidth="{Binding Path=Picture5WidthProperty}"
-                        MaxHeight="{Binding Path=Picture5HeightProperty}"
-                    HorizontalAlignment="Left" VerticalAlignment="Top" >
-                    <Border.Background>
-                        <ImageBrush ImageSource="{Binding Path=Picture5BorderProperty}" Tile="Tile"/>
-                    </Border.Background>
-                    <Image Source ="{Binding Path=Picture5Property}" Stretch="Uniform" Margin ="{Binding Path=Picture5BorderMarginsProperty}"/>
-                </Border>
-                <Label x:Name="Picture5Label" Content="{Binding Path=Picture5DateProperty}" 
-              HorizontalAlignment="Center" VerticalAlignment="Bottom" 
-              Color="{Binding Path=Picture5DateColorProperty}" FontSize="8"/>
-            </Grid>
-        </Canvas>
-        <Canvas x:Name="Picture6Grid" Canvas.Top="{Binding Path=Picture6PosYProperty}" 
-                Canvas.Left="{Binding Path=Picture6PosXProperty}">
-            <Canvas.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform CenterX="200" CenterY="75" Angle="0" />
-                </TransformGroup>
-            </Canvas.RenderTransform>
-            <Grid>
-                <Border x:Name="Picture6Border"
-                        MaxWidth="{Binding Path=Picture6WidthProperty}"
-                        MaxHeight="{Binding Path=Picture6HeightProperty}"
-                    HorizontalAlignment="Left" VerticalAlignment="Top" >
-                    <Border.Background>
-                        <ImageBrush ImageSource="{Binding Path=Picture6BorderProperty}" Tile="Tile"/>
-                    </Border.Background>
-                    <Image Source ="{Binding Path=Picture6Property}" Stretch="Uniform" Margin ="{Binding Path=Picture6BorderMarginsProperty}"/>
-                </Border>
-                <Label x:Name="Picture6Label" Content="{Binding Path=Picture6DateProperty}" 
-              HorizontalAlignment="Center" VerticalAlignment="Bottom" 
-              Color="{Binding Path=Picture6DateColorProperty}" FontSize="8"/>
-            </Grid>
-        </Canvas>
-        <Canvas x:Name="Picture7Grid" Canvas.Top="{Binding Path=Picture7PosYProperty}" 
-                Canvas.Left="{Binding Path=Picture7PosXProperty}">
-            <Canvas.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform CenterX="200" CenterY="75" Angle="0" />
-                </TransformGroup>
-            </Canvas.RenderTransform>
-            <Grid>
-                <Border x:Name="Picture7Border" 
-                        MaxWidth="{Binding Path=Picture7WidthProperty}"
-                        MaxHeight="{Binding Path=Picture7HeightProperty}"
-                    HorizontalAlignment="Left" VerticalAlignment="Top" >
-                    <Border.Background>
-                        <ImageBrush ImageSource="{Binding Path=Picture7BorderProperty}" Tile="Tile"/>
-                    </Border.Background>
-                    <Image Source ="{Binding Path=Picture7Property}" Stretch="Uniform" Margin ="{Binding Path=Picture7BorderMarginsProperty}"/>
-                </Border>
-                <Label x:Name="Picture7Label" Content="{Binding Path=Picture7DateProperty}" 
-              HorizontalAlignment="Center" VerticalAlignment="Bottom" 
-              Color="{Binding Path=Picture7DateColorProperty}" FontSize="8"/>
-            </Grid>
-        </Canvas>
-        <Canvas x:Name="Picture8Grid" Canvas.Top="{Binding Path=Picture8PosYProperty}" 
-                Canvas.Left="{Binding Path=Picture8PosXProperty}">
-            <Canvas.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform CenterX="200" CenterY="75" Angle="0" />
-                </TransformGroup>
-            </Canvas.RenderTransform>
-            <Grid>
-                <Border x:Name="Picture8Border" 
-                        MaxWidth="{Binding Path=Picture8WidthProperty}"
-                        MaxHeight="{Binding Path=Picture8HeightProperty}"
-                    HorizontalAlignment="Left" VerticalAlignment="Top" >
-                    <Border.Background>
-                        <ImageBrush ImageSource="{Binding Path=Picture8BorderProperty}" Tile="Tile"/>
-                    </Border.Background>
-                    <Image Source ="{Binding Path=Picture8Property}" Stretch="Uniform" Margin ="{Binding Path=Picture8BorderMarginsProperty}"/>
-                </Border>
-                <Label x:Name="Picture8Label" Content="{Binding Path=Picture8DateProperty}" 
-              HorizontalAlignment="Center" VerticalAlignment="Bottom" 
-              Color="{Binding Path=Picture8DateColorProperty}" FontSize="8"/>
-            </Grid>
-        </Canvas>
+        <ListView Style="{ThemeResource ListViewStyle}" ItemsSource="{Binding Path=PictureList}"/>         
     </Canvas>
 </Screen>
